# fastapi_tutorial

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
src/: main.py  schemas.py
tests/: test_app.py
