[project]
name = "fast-api-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]>=0.115.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT", "N", "FURB", "FAST", "RUF", "ARG", "PTH"]
ignore = ["PLR0914"]
fixable = ["ALL"]

[tool.pytest.ini_options]
pythonpath='.'
addopts='-p no:warnings'

[tool.taskipy.tasks]
start = 'fastapi dev src/main.py --host 0.0.0.0'

pre_test='task lint'
test = 'pytest --cov=src -vv'
post_test='coverage html'

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'